# genai-stack

./: .dockerignore  .gitignore  README.md  agentic_rag.py  api.Dockerfile  bot.Dockerfile  chains.py  docker-compose.yml  env.example  flight_agent.py  langgraph.json  langgraph_chatbot_with_mem_human_in_loop.ipynb  langgraph_weather_agent.ipynb  langgrraph-local-adaptive-rag.ipynb  loader.Dockerfile  loader.py  math_agent.py  multiagent.Dockerfile  pdf_bot.Dockerfile  populate_stores.py  pyproject.toml  requirements.txt  research_agent.py  retrievers.py  supervisor_agent.py  tools.py
