[project]
name = "genai-stack"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Martinez",email = "alexmtnezf@gmail.com"}
]
packages = [{include = "*.py", from = "./"}]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "nomic[local] (>=3.5.3,<4.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "tiktoken (>=0.11.0,<0.12.0)",
    "langchain-nomic (>=0.1.4,<0.2.0)",
    "langchain-ollama (>=0.3.6,<0.4.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "langgraph (>=0.6.5,<0.7.0)",
    "tavily-python (>=0.7.10,<0.8.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "langgraph-cli[inmem] (>=0.3.6,<0.4.0)",
    "langchain-openai (>=0.3.30,<0.4.0)",
    "langchain-google-genai (>=2.1.9,<3.0.0)",
    "qdrant-client (>=1.15.1,<2.0.0)",
    "langgraph-supervisor (>=0.0.29,<0.0.30)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

